# test_task

./: .gitignore  CMakeLists.txt  dbcontroller.cpp  dbcontroller.h  gamewindow.cpp  gamewindow.h  inventory.cpp  inventory.h  inventoryWidget.cpp  inventoryWidget.h  inventoryitemdelegate.cpp  inventoryitemdelegate.h  item.cpp  item.h  itemwidget.cpp  itemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  startwidget.cpp  startwidget.h
